now on sale section completed

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="row">
             <div class="col-xs-0 col-md-2"></div>
             <div
-              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary"
+              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary d-flex align-items-center"
             >
               <i class="fas fa-marker"></i>
               <h4 class="d-inline-block p-3">Highlights</h4>
@@ -414,7 +414,7 @@
           <div class="row">
             <div class="col-xs-0 col-md-2"></div>
             <div
-              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary"
+              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary d-flex align-items-center"
             >
               <i class="fas fa-star"></i>
               <h4 class="d-inline-block p-3">What's good?</h4>
@@ -515,7 +515,7 @@
           <div class="row">
             <div class="col-xs-0 col-md-2"></div>
             <div
-              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary"
+              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary d-flex align-items-center"
             >
               <i class="fas fa-marker"></i>
               <h4 class="d-inline-block p-3">Recommended</h4>
@@ -954,6 +954,133 @@
                   ></span>
                   <span class="visually-hidden">Next</span>
                 </button>
+              </div>
+            </div>
+            <div class="col-xs-0 col-md-2"></div>
+          </div>
+        </div>
+      </section>
+      <section id="now-on-sale">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-0 col-md-2"></div>
+            <div
+              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary d-flex align-items-center"
+            >
+              <i class="fas fa-piggy-bank"></i>
+              <h4 class="d-inline-block p-3">Now on sale</h4>
+            </div>
+            <div class="col-xs-0 col-md-2"></div>
+          </div>
+        </div>
+        <div class="container mt-3 mb-3">
+          <div class="row">
+            <div class="col-xs-0 col-md-2"></div>
+            <div class="col-xs-12 col-md-8 flex-wrap d-flex text-muted p-0">
+              <div class="row">
+                <div class="col-md-3 bg-img1"></div>
+                <div class="col-md-3 bg-img2"></div>
+
+                <div class="col-md-6">
+                  <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col px-1">
+                      <div class="card h-100">
+                        <img
+                          src="./assets/tile (34).jpg"
+                          class="card-img-top"
+                          alt="..."
+                        />
+                        <div class="card-body">
+                          <div class="d-flex flex-column">
+                            <p class="card-text">OMG This Game!</p>
+                            <div
+                              class="d-flex justify-content-between align-items-center"
+                            >
+                              <div>
+                                <i class="fab fa-windows"></i>
+                                <i class="fab fa-apple"></i>
+                                <i class="fab fa-linux"></i>
+                              </div>
+                              <h5 class="m-0">$ 19.99</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col px-1">
+                      <div class="card h-100">
+                        <img
+                          src="./assets/tile (37).jpg"
+                          class="card-img-top"
+                          alt="..."
+                        />
+                        <div class="card-body">
+                          <div class="d-flex flex-column">
+                            <p class="card-text">OMG This Game!</p>
+                            <div
+                              class="d-flex justify-content-between align-items-center"
+                            >
+                              <div>
+                                <i class="fab fa-windows"></i>
+                                <i class="fab fa-apple"></i>
+                                <i class="fab fa-linux"></i>
+                              </div>
+                              <h5 class="m-0">$ 19.99</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col px-1">
+                      <div class="card h-100">
+                        <img
+                          src="./assets/tile (39).jpg"
+                          class="card-img-top"
+                          alt="..."
+                        />
+                        <div class="card-body">
+                          <div class="d-flex flex-column">
+                            <p class="card-text">OMG This Game!</p>
+                            <div
+                              class="d-flex justify-content-between align-items-center"
+                            >
+                              <div>
+                                <i class="fab fa-windows"></i>
+                                <i class="fab fa-apple"></i>
+                                <i class="fab fa-linux"></i>
+                              </div>
+                              <h5 class="m-0">$ 19.99</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col px-1">
+                      <div class="card h-100">
+                        <img
+                          src="./assets/tile (40).jpg"
+                          class="card-img-top"
+                          alt="..."
+                        />
+                        <div class="card-body">
+                          <div class="d-flex flex-column">
+                            <p class="card-text">OMG This Game!</p>
+                            <div
+                              class="d-flex justify-content-between align-items-center"
+                            >
+                              <div>
+                                <i class="fab fa-windows"></i>
+                                <i class="fab fa-apple"></i>
+                                <i class="fab fa-linux"></i>
+                              </div>
+                              <h5 class="m-0">$ 19.99</h5>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-xs-0 col-md-2"></div>
