object fit adjustments

--- a/index.html
+++ b/index.html
@@ -978,8 +978,20 @@
             <div class="col-xs-0 col-md-2"></div>
             <div class="col-xs-12 col-md-8 flex-wrap d-flex text-muted p-0">
               <div class="row">
-                <div class="col-md-3 bg-img1"></div>
-                <div class="col-md-3 bg-img2"></div>
+                <div class="col-md-3">
+                  <img
+                    src="./assets/carousel5.jpg"
+                    class="h-100 w-100 img-fit"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-3">
+                  <img
+                    src="./assets/carousel2.jpg"
+                    class="h-100 w-100 img-fit right47"
+                    alt=""
+                  />
+                </div>
 
                 <div class="col-md-6">
                   <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -1080,6 +1092,51 @@
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-0 col-md-2"></div>
+          </div>
+        </div>
+      </section>
+      <section id="news">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-0 col-md-2"></div>
+            <div
+              class="col-xs-12 col-md-8 text-muted border-bottom p-0 border-secondary d-flex align-items-center"
+            >
+              <i class="fas fa-bullhorn"></i>
+              <h4 class="d-inline-block p-3">News</h4>
+            </div>
+            <div class="col-xs-0 col-md-2"></div>
+          </div>
+        </div>
+        <div class="container mt-3 mb-3">
+          <div class="row">
+            <div class="col-xs-0 col-md-2"></div>
+            <div class="col-xs-12 col-md-8 flex-wrap d-flex text-muted p-0">
+              <div class="row">
+                <div class="col-md-6">
+                  <img
+                    src="./assets/tile (36).jpg"
+                    class="h-100 w-100 img-fit"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-3">
+                  <img
+                    src="./assets/tile (33).jpg"
+                    class="h-100 w-100 img-fit"
+                    alt=""
+                  />
+                </div>
+                <div class="col-md-3">
+                  <img
+                    src="./assets/tile (27).jpg"
+                    class="h-100 w-100 img-fit"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
