--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             /></a>
 
             <div
-              class="collapse navbar-collapse justify-content-evenly"
+              class="collapse navbar-collapse justify-content-between"
               id="navbarSupportedContent"
             >
               <ul class="navbar-nav justify-content-center">
